--- a/assets/one-page-ui.css
+++ b/assets/one-page-ui.css
@@ -51,7 +51,7 @@ body{
 
 .benefits{
 	color: white;
-	margin: 50px 0;
+	background: url(bg-grey.jpg);
 }
 
 section{
@@ -81,23 +81,16 @@ li{
 }
 
 .btn-cta{
-	min-height: 30px;
-	line-height: 30px;
+  font-size: 18px;
+  min-width: 200px;
+	min-height: 50px;
+	line-height: 50px;
 	margin-top: 8px;
 	cursor: pointer;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
 	border-radius: 0;
-	background: #079047;
+	background: white;
 }
-
-/*
-.btn-cta:hover{
-  background: #ad5600;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ad5600), color-stop(1, #e17000));
-  background: -ms-linear-gradient(bottom, #ad5600, #e17000);
-  background: -moz-linear-gradient(center bottom, #ad5600 0%, #e17000 100%);
-}
-*/
 
 .btn-cta span{
 	font-size: 14px;
