--- a/assets/one-page-ui.css
+++ b/assets/one-page-ui.css
@@ -48,17 +48,47 @@ body{
   background-color: rgba(135,40,47,0.77);
 }
 
-
-.benefits{
-	color: white;
-	background: url(bg-grey.jpg);
+.services{
+	color: black;
+	background: url(fabric_of_squares_gray.png);
 }
 
 section{
 	padding: 50px 0 50px 0;
 }
 
+section h2{
+	font-size: 40px;
+	font-weight: 100;
+	color: #474b4e;
+	line-height: 30px;
+	padding-bottom: 10px;
+}
 
+.rates{
+  min-height: 200px;
+  background: #c0e7f3;
+  margin-top: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.32);
+}
+
+.units{
+  min-height: 300px;
+  background: white;
+  border-top:1px solid #ccc;
+}
+
+.units p{
+  line-height: 10px;
+}
+
+#maps{
+  width: 100%;
+  height: 300px; 
+}
+
+/*
 li{
 	list-style-image: url(images/list.png);
 	margin: 10px 0 10px;
@@ -66,6 +96,7 @@ li{
 	font-weight: 100;
 	line-height: 5px;
 }
+*/
 
 .convert{
 
@@ -88,27 +119,12 @@ li{
 	margin-top: 8px;
 	cursor: pointer;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-	border-radius: 0;
 	background: white;
+	border-radius: 50px;
+	border: 4px groove #a50d0d;
 }
 
 .btn-cta span{
 	font-size: 14px;
 	display: block;
-}
-
-section h2{
-	font-size: 50px;
-	font-weight: 100;
-	color: #474b4e;
-	text-align: center;
-	line-height: 50px;
-}
-
-section h3, section h4{
-	font-size: 18px;
-	font-weight: 100;
-	color: #474b4e;
-	text-align: center;
-	line-height: 25px;
 }
