--- a/assets/one-page-ui.css
+++ b/assets/one-page-ui.css
@@ -99,12 +99,13 @@ section h2{
   min-height: 150px;
   padding: 20px 10px 0 20px;
   border: 1px solid #ccc;
-  margin: 5px;
+  margin: 20px;
 }
 
 #maps{
   width: 100%;
-  height: 300px; 
+  height: 500px;
+  margin-top: 50px; 
 }
 
 .convert{
