--- a/assets/one-page-ui.css
+++ b/assets/one-page-ui.css
@@ -18,6 +18,10 @@ body{
   margin-bottom: 0px;
 }
 
+.nav{
+  padding-top: 20px;
+}
+
 .header{
 	background: url(bg-banner.jpg) center center;
   background-attachment: fixed;
@@ -106,6 +110,11 @@ section h2{
   width: 100%;
   height: 500px;
   margin-top: 50px; 
+}
+
+.contact{
+  min-height: 300px;
+  background-color: rgba(135,40,47,0.77);
 }
 
 .convert{
