--- a/assets/one-page-ui.css
+++ b/assets/one-page-ui.css
@@ -72,7 +72,7 @@ section h2{
 }
 
 .units{
-	min-height: 300px;
+	min-height: 500px;
 	background: white;
 	border-top:1px solid #ccc;
 	padding: 50px 0 50px 0;
@@ -172,4 +172,8 @@ a:hover.btn-city{
 
 .arrow{
 	margin-bottom: -200px;
+}
+
+.forms{
+  min-height: 600px;
 }
